# gm6020-racing-wheel

./: .gitignore  README.md
docs/: motor-setup.md  setup.md  wiring.md
firmware/: CMakeLists.txt
firmware/MDK-ARM/: GM6020_Racing_Wheel.uvprojx
firmware/STM32CubeMX/: README.md
firmware/include/: app_config.h  gm6020.h  pid.h  wheel_app.h
firmware/src/: gm6020.c  main.c  pid.c  wheel_app.c
pc/: app.py  bridge.py  config.json  requirements.txt
